Refactor AI Research Assistant: Integrate Tavily API for web research, remove data collection agent, and enhance report generation workflow
- Updated package.json to rename project and include Tavily API dependency.
- Modified pnpm-lock.yaml to reflect new dependencies.
- Refactored root agent to utilize TavilySearchTool for direct web searches.
- Removed data collection agent and related tools, streamlining the research process.
- Implemented TavilySearchTool for efficient web searching and result accumulation.
- Enhanced analysis and comprehensive report agents to include mandatory references.
- Updated environment variables to include TAVILY_API_KEY for search functionality.
- Created a test script for Tavily search functionality to ensure proper integration.

--- a/agents/research-assistant/.env.example
+++ b/agents/research-assistant/.env.example
@@ -1,17 +1,18 @@
-# AI Research Assistant Environment Configuration
+# Research Assistant Environment Configuration
 
 # Optional: Enable debug logging for framework and agent details
 # Set to "true" to see detailed logs during development
 ADK_DEBUG=false
 
-# Required: Google API key for web search functionality
-# Get your API key from: https://aistudio.google.com/api-keys
-GOOGLE_API_KEY=
+# Required: LLM API key for AI functionality
+# Get your API key from your LLM provider (OpenAI, Google, etc.)
+# Get your OpenAI API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=
 
-# Optional: AI model to use (default: gemini-2.5-flash)
-# Available models: gemini-2.5-flash, gemini-1.5-pro, etc.
-LLM_MODEL=gemini-2.5-flash
+# Optional: AI model to use
+# Configure based on your LLM provider (e.g., gpt-4o-mini, gemini-2.5-flash, etc.)
+LLM_MODEL=gpt-4o-mini
 
-# Required: Google Custom Search Engine ID
-# Create a Custom Search Engine and get the CX from: https://developers.google.com/custom-search/v1/overview
-GOOGLE_CX=
+# Required: Tavily API key for web search functionality
+# Get your API key from: https://app.tavily.com/
+TAVILY_API_KEY=
