feat: Add ATP Micropayment Analyst server with payment middleware and API endpoints
- Implemented a new server for the ATP Micropayment Analyst using Hono framework.
- Configured environment variables for facilitator URL, wallet address, and network.
- Defined paid routes with associated prices for various API endpoints.
- Integrated CORS support and payment middleware for handling micropayments.
- Created endpoints for fetching prices, holdings, agent info, stats, and top agents.
- Added TypeScript configuration for the server.

docs: Add README for Research Assistant agent

- Introduced a comprehensive README for the Research Assistant agent.
- Documented features, architecture, workflow, project structure, and usage examples.
- Provided installation instructions and environment variable setup.

chore: Remove outdated x402 agent documentation and implementation

- Deleted the README and agent implementation files for the x402 agent as they are no longer needed.

--- a/agents/atp-micropayment-analyst/agent/package.json
+++ b/agents/atp-micropayment-analyst/agent/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "agent",
 	"version": "1.0.0",
-	"description": "Agent built with ADK-TS that has specialized knowledge on IQAI's ATP",
+	"description": "Micropayment-enabled ATP analyst agent built with ADK-TS",
 	"main": "dist/index.js",
 	"private": true,
 	"scripts": {
