feat: Enhance environment configuration by adding optional settings for LLM model and API server URL

--- a/agents/atp-micropayment-agent/agent/.env.example
+++ b/agents/atp-micropayment-agent/agent/.env.example
@@ -1,3 +1,18 @@
-ADK_DEBUG=false # Enable debug mode
-WALLET_PRIVATE_KEY=your_wallet_private_key_here
-GOOGLE_API_KEY=your_google_api_key_here
+# ATP Micropayment Agent Environment Configuration
+
+# Enable debug logging (true/false)
+ADK_DEBUG=false
+
+# Required: Private key for your wallet (used for payments)
+WALLET_PRIVATE_KEY=
+
+# Required: Google API key for Gemini model access
+GOOGLE_API_KEY=
+
+# Optional: LLM model to use (e.g., gemini-2.5-flash, gpt-4o-mini)
+LLM_MODEL=gemini-2.5-flash
+
+# Optional: API server base URL (for agent-server communication)
+API_SERVER_URL=http://localhost:3001
+
+# Add any other server-specific settings below
