--- a/agents/atp-micropayment-agent/server/.env.example
+++ b/agents/atp-micropayment-agent/server/.env.example
@@ -1,3 +1,16 @@
+# ATP Micropayment Server Environment Configuration
+
+# Facilitator URL for x402 payment protocol
 FACILITATOR_URL="https://x402.org/facilitator"
-ADDRESS=your_wallet_address_here # Your wallet address (to receive payments)
+
+# Required: Your wallet address (to receive payments)
+# Must be a valid Ethereum address (starts with 0x)
+ADDRESS=
+
+# Network to use for payments (choose one of: base-sepolia, base, avalanche-fuji, avalanche, iotex)
 NETWORK=base-sepolia
+
+# Optional: Upstream IQ AI API base URL
+IQ_API_BASE_URL=https://app.iqai.com/api
+
+# Add any other server-specific settings below
