--- a/agents/atp-micropayment-agent/package.json
+++ b/agents/atp-micropayment-agent/package.json
@@ -9,14 +9,10 @@
     "dev:agent": "cd agent && pnpm run dev",
     "build": "cd server && pnpm run build && cd ../agent && pnpm run build",
     "start": "concurrently \"cd server && pnpm run start\" \"cd agent && pnpm run start\"",
-    "postinstall": "cd server && pnpm install && cd ../agent && pnpm install",
-    "lint": "cd server && biome check . && cd ../agent && biome check .",
-    "lint:fix": "cd server && biome check --write . && cd ../agent && biome check --write .",
-    "format": "cd server && biome format --write . && cd ../agent && biome format --write ."
+    "postinstall": "cd server && pnpm install && cd ../agent && pnpm install"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "@biomejs/biome": "^2.2.0"
+    "concurrently": "^8.2.2"
   },
   "keywords": [],
   "author": "IQAICOM",
