--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,4 +8,4 @@
 # Format: path/pattern @username @team
 
 # IQ Flights
-/agents/iq-flights/ @Adebesin-Cell 
+/agents/atp-micropayment-agent/ @timonwa
