--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
+	"name": "@iqai/adk-ts-samples",
+	"version": "1.0.0",
+	"description": "IQAI Agent Development Kit TypeScript samples and agents",
+	"private": true,
 	"scripts": {
 		"format": "biome format . --write",
 		"lint": "lint-staged --allow-empty",
-		"prepare": "husky"
+		"prepare": "husky",
+		"clean": "turbo clean && rm -rf node_modules pnpm-lock.yaml",
+		"build": "turbo build",
+		"dev": "turbo dev"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.6",
+		"@iqai/adk": "^0.5.6",
 		"husky": "9.1.7",
 		"lint-staged": "^16.2.6",
 		"turbo": "^2.6.1"
