--- a/agents/atp-micropayment-agent/tsconfig.json
+++ b/agents/atp-micropayment-agent/tsconfig.json
@@ -1,26 +1,20 @@
 {
 	"compilerOptions": {
 		"target": "ES2022",
-		"module": "preserve",
+		"module": "ES2022",
 		"lib": ["ES2022"],
+		"moduleResolution": "bundler",
 		"outDir": "./dist",
 		"rootDir": "./src",
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"moduleResolution": "bundler",
-		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true,
-		"declaration": true,
-		"declarationMap": true,
-		"sourceMap": true,
-		"removeComments": false,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"types": ["node"]
+		"resolveJsonModule": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
 }
