--- a/agents/research-assistant/tsconfig.json
+++ b/agents/research-assistant/tsconfig.json
@@ -2,9 +2,7 @@
 	"compilerOptions": {
 		"target": "ES2022",
 		"module": "CommonJS",
-		"lib": [
-			"ES2022"
-		],
+		"lib": ["ES2022"],
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"strict": true,
@@ -21,15 +19,8 @@
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
-		"types": [
-			"node"
-		]
+		"types": ["node"]
 	},
-	"include": [
-		"src/**/*.ts"
-	],
-	"exclude": [
-		"node_modules",
-		"dist"
-	]
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules", "dist"]
 }
