--- a/apps/research-assistant/tsconfig.json
+++ b/apps/research-assistant/tsconfig.json
@@ -6,11 +6,6 @@
 		"rootDir": "./src",
 		"moduleResolution": "node"
 	},
-	"include": [
-		"src/**/*.ts"
-	],
-	"exclude": [
-		"node_modules",
-		"dist"
-	]
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules", "dist"]
 }
