feat: Revamp TaskMaster Bot architecture and agent interactions
- Removed outdated agent architecture documentation.
- Updated package description to reflect AI-powered capabilities and multi-agent architecture.
- Enhanced TaskMaster Agent to manage user requests and route them to specialized sub-agents.
- Improved Reminder Agent with detailed capabilities for managing reminders and scheduling.
- Expanded Shopping List Agent functionalities for better item management.
- Refined Telegram Agent for improved message handling and routing.
- Added comprehensive tool specifications and capabilities for agents.
- Implemented environment variable validation for better configuration management.
- Enhanced reminder notification service for efficient background processing.
- Updated type definitions for reminders and shopping list items to ensure type safety.
- Configured TypeScript paths for cleaner imports and better module resolution.

--- a/apps/telegram-personal-assistant/.env.example
+++ b/apps/telegram-personal-assistant/.env.example
@@ -1,15 +1,17 @@
-# TaskMaster Bot Configuration
+# Telegram Personal Assistant Configuration
 # Copy this file to .env and fill in your values
 
 # Enable debug logging (true/false)
 ADK_DEBUG=false
 
-# Required: Google API key for Gemini model access
+# Required: Google AI API key for Gemini model access
 GOOGLE_API_KEY=
 
-# Database Configuration
-DATABASE_URL= # PostgreSQL connection string, e.g., postgresql://username:password@localhost:5432/taskmaster
+# Required: PostgreSQL database connection string
+DATABASE_URL=
 
-# Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN= # get this from @BotFather on Telegram
-TELEGRAM_CHANNEL_ID= # your channel/chat ID where notifications will be sent
+# Required: Telegram bot token from @BotFather
+TELEGRAM_BOT_TOKEN=
+
+# Required: Telegram channel/chat ID for notifications
+TELEGRAM_CHANNEL_ID=
