--- a/.gitignore
+++ b/.gitignore
@@ -56,11 +56,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
