remove Discord community links and replace with GitHub Discussions across multiple README files

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,9 +3,9 @@ contact_links:
   - name: ADK-TS Documentation
     url: https://adk.iqai.com/docs
     about: Check the official ADK-TS documentation for framework guides and API references
-  - name: Discord Community
-    url: https://discord.gg/w2Uk6ACK4D
-    about: Join our community for discussions and support with ADK-TS
   - name: Main ADK-TS Repository
     url: https://github.com/IQAIcom/adk-ts
     about: Report framework bugs or feature requests in the main repository
+  - name: GitHub Discussions
+    url: https://github.com/IQAIcom/adk-ts/discussions
+    about: Engage with the community to ask questions, share ideas, and get help
