update dependencies to use specific version of @iqai/adk (^0.5.6) across multiple packages

--- a/apps/dao-proposal-analyzer/package.json
+++ b/apps/dao-proposal-analyzer/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "dao-proposal-analyzer",
 	"version": "1.0.0",
-	"description": "Multi-agent DAO governance system that analyzes proposals, simulates outcomes, and recommends votes for DAO members using ADK-TS",
+	"description": "Multi-agent DAO governance system that analyzes on-chain proposals and provides voting recommendations for DAO members using ADK-TS",
 	"main": "dist/index.js",
 	"private": true,
 	"scripts": {
@@ -12,7 +12,7 @@
 		"prebuild": "pnpm clean"
 	},
 	"dependencies": {
-		"@iqai/adk": "workspace:*",
+		"@iqai/adk": "^0.5.6",
 		"dotenv": "^17.2.2",
 		"viem": "^2.21.0",
 		"zod": "^4.1.5"
