--- a/apps/crypto-tax-agent/package.json
+++ b/apps/crypto-tax-agent/package.json
@@ -12,7 +12,7 @@
 		"prebuild": "pnpm clean"
 	},
 	"dependencies": {
-		"@iqai/adk": "workspace:*",
+		"@iqai/adk": "^0.5.6",
 		"dotenv": "^17.2.2",
 		"viem": "^2.21.60",
 		"zod": "^4.1.5"
